--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -12,6 +12,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 1;
 
 	img {
 		width: 120px;
@@ -63,7 +64,7 @@
 
 
 		.menu {
-			gap: 0.5rem;
+			gap: 0.6rem;
 			a {
 				padding: 0.2rem 0.3rem;
 				font-size: 0.95rem;
