--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-	background-color: #f0f8ff;
+	background-color: $main-light;
 	font-family: 'Nunito', sans-serif;
 }
 
@@ -16,4 +18,11 @@ h1 {
 
 main {
 	padding-top: 4.4rem;
+}
+
+.wrapper {
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 20px;
 }
