--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,3 +26,18 @@ main {
 	margin: 0 auto;
 	padding: 0 20px;
 }
+
+.section-title {
+	text-align: center;
+	font-size: 2.5rem;
+	margin-bottom: 2rem;
+	color: #2b2b2b;
+}
+
+section {
+	padding: 3rem 1rem;
+}
+
+.red {
+	background-color: red;
+}
