--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,13 +11,13 @@ body {
 	font-family: 'Nunito', sans-serif;
 }
 
-h1 {
-	text-align: center;
-	margin-top: 25px;
-}
-
 main {
 	padding-top: 4.4rem;
+}
+
+h1 {
+	margin-top: 25px;
+	text-align: center;
 }
 
 .wrapper {
@@ -28,14 +28,14 @@ main {
 }
 
 .section-title {
-	text-align: center;
+	margin-top: 0;
 	font-size: 2.5rem;
 	margin-bottom: 2rem;
 	color: #2b2b2b;
 }
 
 section {
-	padding: 3rem 1rem;
+	padding: 2rem 1rem;
 }
 
 .red {
