add documents section

--- a/src/components/MainPage/HistorySection/HistorySection.module.scss
+++ b/src/components/MainPage/HistorySection/HistorySection.module.scss
@@ -1,8 +1,5 @@
 @import '../../../style/colors.scss';
 
 .history {
-	background-color: $main-yellow;
-	background-color: #FFFFE0;
-	background-color: #FFFACD;
-	background-color: #FFFDD0;
+	background-color: $main-light-yellow;
 }
