--- a/src/components/MainPage/TeamSection/TeamSection.module.scss
+++ b/src/components/MainPage/TeamSection/TeamSection.module.scss
@@ -1,3 +1,9 @@
+@import '../../../style/colors.scss';
+
+.container {
+	background-color: $main-light-blue;
+}
+
 .cards {
 	display: flex;
 	justify-content: center;
