--- a/src/components/MainPage/DocumentsSection/DocumentsSection.module.scss
+++ b/src/components/MainPage/DocumentsSection/DocumentsSection.module.scss
@@ -27,10 +27,6 @@ section {
 		padding: 15px;
 		transition: transform 0.3s ease;
 
-		&:hover {
-			transform: scale(1.1);
-		}
-
 		img {
 			width: 100%;
 			height: 300px;
@@ -42,7 +38,45 @@ section {
 			text-align: center;
 			font-size: 1.1rem;
 			color: black;
-			border-bottom: 1px solid black;
+		}
+
+		a {
+			margin-top: 10px;
+
+			button {
+				padding: 12px 24px;
+				background-color: $main-yellow;
+				color: black;
+				font-weight: bold;
+				border: none;
+				border-radius: 6px;
+				cursor: pointer;
+				transition: background-color 0.3s ease;
+
+				&:hover {
+					background-color: darken($main-yellow, 10%);
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 600px) {
+	.documents {
+		.document {
+			width: 90%;
+			img {
+				height: auto;
+				max-height: 300px;
+			}
+
+			h3 {
+				font-size: 1rem;
+			}
+
+			button {
+				width: 100%;
+			}
 		}
 	}
 }
