--- a/src/components/MainPage/HistorySection/HistorySection.module.scss
+++ b/src/components/MainPage/HistorySection/HistorySection.module.scss
@@ -1,5 +1,5 @@
 @import '../../../style/colors.scss';
 
 .history {
-	background-color: $main-light-yellow;
+	background-color: $main-light-blue;
 }
