--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,6 +32,7 @@ h1 {
 	font-size: 2.5rem;
 	margin-bottom: 2rem;
 	color: #2b2b2b;
+	text-align: center;
 }
 
 section {
@@ -40,4 +41,10 @@ section {
 
 .red {
 	background-color: red;
+}
+
+@media (max-width: 600px) {
+	.section-title {
+		font-size: 2rem;
+	}
 }
