--- a/src/components/MainPage/AboutUsSection/AboutUsSection.module.scss
+++ b/src/components/MainPage/AboutUsSection/AboutUsSection.module.scss
@@ -6,13 +6,11 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 
 	.container {
 		background-color: $main-light-blue;
 		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-		// box-shadow: 0 4px 12px rgba(0, 120, 180, 0.15);
-		// box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
-		// box-shadow: 0 4px 10px rgba(173, 216, 230, 0.4);
 		border-radius: 0.5rem;
 		padding: 1.2rem;
 	}
@@ -55,6 +53,25 @@
 		font-size: 1.1rem;
 		text-align: center;
 	}
+
+	.icon {
+		font-size: 15rem;
+		color: $main-light-blue;
+	}
+
+	.left {
+		animation: moveLeftIcon 60s ease-in-out infinite;
+		position: absolute;
+		top: 35%;
+		left: 5%;
+	}
+
+	.right {
+		animation: moveRightIcon 60s ease-in-out infinite;
+		position: absolute;
+		top: 35%;
+		right: 5%;
+	}
 }
 
 @media (max-width: 1024px) {
@@ -69,11 +86,63 @@
 			}
 		}
 
-		aboutDetails ul,
+		.aboutDetails ul,
 		.facilities ul {
 			li {
 				font-size: 1rem;
 			}
 		}
+	}
+}
+
+@media (max-width: 1200px) {
+	.aboutSection {
+		.icon {
+			display: none;
+		}
+	}
+}
+
+@media (min-width: 1200px) and (max-width: 1500px) {
+	.aboutSection {
+		.icon {
+			font-size: 7rem;
+		}
+
+		.left {
+			left: 5%;
+		}
+	}
+}
+
+@keyframes moveLeftIcon {
+	0%,
+	50%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	25% {
+		transform: rotate(20deg);
+	}
+
+	75% {
+		transform: rotate(-20deg);
+	}
+}
+
+@keyframes moveRightIcon {
+	0%,
+	50%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	25% {
+		transform: rotate(-20deg);
+	}
+
+	75% {
+		transform: rotate(20deg);
 	}
 }
