--- a/src/components/HelpUsPage/DonationInfoSection/DonationInfoSection.module.scss
+++ b/src/components/HelpUsPage/DonationInfoSection/DonationInfoSection.module.scss
@@ -22,6 +22,7 @@
 
 		h3 {
 			font-size: 2rem;
+			text-align: center;
 		}
 
 		hr {
@@ -86,12 +87,34 @@
 			max-width: 100%;
 			padding: 1rem;
 			text-align: center;
+
+			h3 {
+				text-align: center;
+			}
+
+			hr {
+				width: 100%;
+			}
 		}
 
 		img {
 			width: 100%;
 			height: auto;
 			margin-top: 2rem;
+		}
+	}
+}
+
+@media (max-width: 479px) {
+	.container {
+		.textBox {
+			h3 {
+				font-size: 1.5rem;
+			}
+
+			hr {
+				border-top: 2px solid black;
+			}
 		}
 	}
 }
