--- a/src/components/HelpedCard/HelpedCard.module.scss
+++ b/src/components/HelpedCard/HelpedCard.module.scss
@@ -36,10 +36,41 @@
 		font-size: 1.2rem;
 	}
 
+	button {
+		position: absolute;
+		bottom: 5%;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 90%;
+
+		background-color: #f39c12;
+		color: white;
+		cursor: pointer;
+		padding: 0.8rem 1.5rem;
+		border-radius: 8px;
+		border: none;
+		font-weight: 600;
+		font-size: 1rem;
+
+		box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+		transition: background-color 0.3s ease, transform 0.2s ease;
+
+		&:hover {
+			background-color: #e67e22;
+			transform: translateX(-50%) scale(1.03);
+		}
+	}
+
 	&:hover {
 		transform: scale(0.97);
 		border-color: lighten($main-yellow, 10%);
-		will-change: transform;
+	}
+
+	&.noHoverEffect {
+		&:hover {
+			transform: none;
+			border-color: darken($main-yellow, 20%);
+		}
 	}
 }
 
