--- a/src/components/HelpUsPage/WaysToHelpSection/WaysToHelpSection.module.scss
+++ b/src/components/HelpUsPage/WaysToHelpSection/WaysToHelpSection.module.scss
@@ -12,6 +12,13 @@
 	row-gap: 2rem;
 	column-gap: 5rem;
 	flex-wrap: wrap;
+	@media (max-width: 1024px) {
+		column-gap: 1.5rem;
+	}
+
+	@media (max-width: 768px) {
+		column-gap: 1rem;
+	}
 }
 
 .secondRow {
