--- a/src/pages/AchievementsPages/AchievementsPage.module.scss
+++ b/src/pages/AchievementsPages/AchievementsPage.module.scss
@@ -12,9 +12,10 @@
 	padding: 0 15px 20px 15px;
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 1024px) {
 	.wrapper {
 		column-gap: 2rem;
+		padding: 0 7px 10px 7px;
 	}
 }
 
