--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,7 +24,7 @@ h1 {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 0 20px;
+	padding: 10px 20px;
 }
 
 .section-title {
@@ -46,9 +46,5 @@ section {
 @media (max-width: 600px) {
 	.section-title {
 		font-size: 2rem;
-	}
-
-	.wrapper {
-		padding: 0;
 	}
 }
