--- a/src/components/GetHelpPage/GetHelpForm/GetHelpForm.module.scss
+++ b/src/components/GetHelpPage/GetHelpForm/GetHelpForm.module.scss
@@ -2,14 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
 
-	.row {
-		display: flex;
-		flex-direction: row;
-		margin: 0.5rem auto;
+	.title {
+		font-size: 2rem;
+		margin-top: 2rem;
+	}
 
-		.answer {
-			margin-left: 0.5rem;
-		}
+	.helpBtn {
+		width: 90%;
+		padding: 0.5rem;
+		margin-top: 1rem;
+		border-radius: 8px;
+		cursor: pointer;
 	}
 }
