--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -40,6 +40,20 @@ section {
 	padding: 2rem 1rem;
 }
 
+label {
+	width: 90%;
+	display: flex;
+	flex-direction: column;
+
+	input,
+	textarea {
+		font-size: 1rem;
+		width: 100%;
+		padding: 0.5rem;
+		border-radius: 8px;
+	}
+}
+
 .red {
 	background-color: red;
 }
