--- a/src/components/GetHelpPage/GetHelpForm/GetHelpForm.module.scss
+++ b/src/components/GetHelpPage/GetHelpForm/GetHelpForm.module.scss
@@ -1,3 +1,5 @@
+@import '../../../style/colors.scss';
+
 .form {
 	display: flex;
 	flex-direction: column;
@@ -5,6 +7,48 @@
 	width: 100%;
 	justify-content: center;
 	align-items: center;
+
+	.question {
+		font-size: 1.3rem;
+		margin-top: 1rem;
+		font-weight: bold;
+	}
+
+	.radioInputsContainer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: row;
+		margin-bottom: 1rem;
+
+		.row {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			margin: 0 1rem;
+
+			.answer {
+				margin-left: 0.5rem;
+				font-size: 1rem;
+				color: #222;
+			}
+
+			.radio {
+				width: 22px;
+				height: 22px;
+				cursor: pointer;
+			}
+		}
+	}
+
+	.mainInputsContainer {
+		display: contents;
+	}
+
+	.hide {
+		height: 0;
+		opacity: 0;
+	}
 
 	.title {
 		font-size: 2rem;
@@ -17,5 +61,12 @@
 		margin-top: 1rem;
 		border-radius: 8px;
 		cursor: pointer;
+	}
+
+	.errorMessage {
+		color: $main-red;
+		font-weight: bold;
+		font-size: 0.9rem;
+		margin-top: 4px;
 	}
 }
