--- a/src/components/GetHelpPage/SupportSection/SupportSection.module.scss
+++ b/src/components/GetHelpPage/SupportSection/SupportSection.module.scss
@@ -55,11 +55,10 @@
 
 	.formContainer {
 		background-color: $main-light-blue;
-		padding: 2rem 2.5rem;
+		padding: 1rem 2.5rem;
 		display: flex;
-		align-items: flex-start;
+		align-items: center;
 		justify-content: center;
-		// overflow: scroll;
 	}
 }
 
